Fix text overflow issue with long search history entries

--- a/src/renderer/components/ft-input/ft-input.css
+++ b/src/renderer/components/ft-input/ft-input.css
@@ -203,7 +203,8 @@ body[dir='rtl'] .ft-input-component.search.showClearTextButton:focus-within .inp
 }
 
 .list li {
-  display: block;
+  display: flex;
+  justify-content: space-between;
   padding-block: 0;
   line-height: 2rem;
   padding-inline: 15px;
